# DnD

./: .gitignore  .gitmodules  CMakeLists.txt  DISCLAIMER.txt  Game Logic Diagram.drawio  README.md  README.org  Untitled Diagram.drawio
Dungeons&Dragons/: main.cpp  test.cpp
Dungeons&Dragons/Database/: Test_Entity.txt
Dungeons&Dragons/Database/Entities/: Monsters.cpp  Monsters.json
Dungeons&Dragons/Framework/: Action.hpp  Alignment.hpp  Attacks_and_Spells.hpp  Attribute.hpp  Entity.hpp  Game.hpp  Player.hpp  Renderer.hpp  Scenes.hpp  Skill.hpp  State.cpp  State.hpp  Traits_and_Feats.hpp  inclusions.hpp
Dungeons&Dragons/Framework/CharacterCreator/: CreationEngine.cpp  CreationEngine.hpp
Dungeons&Dragons/Framework/Entity Classes/: Entity.hpp  Monster.hpp
Dungeons&Dragons/Framework/Game Engine Classes/: Renderer.hpp  Scenes.hpp  inclusions.hpp
Dungeons&Dragons/Framework/Statistics Classes/: Alignment.hpp  Attacks_and_Spells.hpp  Attribute.hpp  Character Class.hpp  Skill.hpp
Dungeons&Dragons/Framework/entities/: Entity.cpp  Entity.hpp  Monster.hpp  Player.cpp  Player.hpp
Dungeons&Dragons/Framework/game_engine/: Action.cpp  Action.hpp  Game.hpp  Renderer.cpp  Renderer.hpp
Dungeons&Dragons/Framework/statistics/: Attacks_and_Spells.hpp  Attribute.hpp  Character Class.hpp  Skill.cpp  Skill.hpp
Dungeons&Dragons/UI/: Input.hpp  UI.hpp
Dungeons&Dragons/UI/Text/: TextUI.hpp
DungeonsAndDragons/: CMakeLists.txt  main.cpp
DungeonsAndDragons/Database/: Player.txt  Test_Entity.txt
DungeonsAndDragons/Database/EntityFiles/: Commoner.txt  Test_Entity.txt
DungeonsAndDragons/Database/SheetFiles/: MainMenu.hpp  MainMenu.txt  Menu_Factory.cpp  Menu_Factory.hpp  menu_inclusions.hpp
DungeonsAndDragons/Framework/: State.cpp  inclusions.hpp
DungeonsAndDragons/Framework/CharacterCreator/: CreationEngine.cpp  CreationEngine.hpp
DungeonsAndDragons/Framework/entities/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
DungeonsAndDragons/Framework/game_engine/: Action.cpp  Action.hpp  Command_Palette.hpp  Game.hpp  Renderer.hpp  Scenes.cpp  Scenes.hpp  ncurses_testing.cpp
DungeonsAndDragons/Framework/statistics/: Alignment.hpp  Attacks_and_Spells.cpp  Attacks_and_Spells.hpp  Attribute.cpp  Attribute.hpp  Character Class.hpp  Character_Class.hpp  Skill.cpp  Skill.hpp
TicTacToe/: README.md
tests/: CMakeLists.txt  UnitTests.cpp
